tests/base/invalid/SetComprehension_CompileFail_3.whiley
void System::main([string] args):
    xs = {1,2,3}
    zs = { x | x ∈ zs }
    out->println(str(xs))
    out->println(str(zs))
